# AstroAgent

./: .env  .env_example  .gitignore  .requirements.txt  1 copy.ipynb  Quickstart.md  README.md  README_Chinese.md  agent_compile.ipynb  debug.ipynb  debug2.ipynb  main.py  mcp_config.json  output.md  prompt_template copy.json  prompt_template.json  pyproject.toml  read.ipynb  requirements.txt  test.ipynb  x.txt
configs/: mcp_config.json  prompt_config_CN.json  prompt_config_EN.json
data/LRG/output/: 002_rule_analysis.md  002_summary.md  002_visual_interpretation.txt  035_visual_interpretation.txt  150000895_rule_analysis.md  150000895_summary.md  150000895_visual_interpretation.txt
data/QSO/: example_output.md  example_summary.md
data/QSO/input/: 150010559_rule_analysis.md  150010559_summary.md
data/QSO/output/: 150007367_rule_analysis.md  150007367_summary.md  150007367_visual_interpretation.txt  150008304_rule_analysis.md  150008304_summary.md  150010559_rule_analysis.md  150010559_summary.md  150020982_rule_analysis.md  150020982_summary.md  150021863_rule_analysis.md  150021863_summary.md  in_brief.csv  output.md  output.txt  rule_analysis.md  summary.md
data/csst/: asbfklsflajsfjasf.ipynb
data/csst/dataset/: 10884.fits  11058.fits  13082.fits  865.fits  all_indices.csv
data/csst/mock_set1/fits/: csst_qso_005_z2.07_high.fits  csst_qso_008_z2.63_high.fits  csst_qso_011_z2.72_high.fits  csst_qso_020_z3.44_high.fits  csst_qso_025_z1.83_high.fits  csst_qso_040_z1.45_mid.fits  csst_qso_041_z2.49_mid.fits  csst_qso_043_z1.31_mid.fits  csst_qso_044_z2.73_mid.fits  csst_qso_050_z3.28_mid.fits  csst_qso_060_z3.07_mid.fits  csst_qso_069_z1.24_mid.fits  csst_qso_073_z1.71_low.fits  csst_qso_076_z3.44_low.fits  csst_qso_078_z2.25_low.fits  csst_qso_080_z1.91_low.fits  csst_qso_084_z2.94_low.fits  csst_qso_088_z2.07_low.fits  truth_catalog.fits  (+1 more)
data/mock_set1/: csst_qso_001_z2.97_high.fits  csst_qso_003_z2.71_high.fits  csst_qso_006_z3.18_high.fits  csst_qso_007_z2.45_high.fits  csst_qso_010_z1.89_high.fits  csst_qso_014_z3.38_high.fits  csst_qso_017_z2.48_high.fits  csst_qso_024_z2.85_high.fits  csst_qso_026_z3.29_high.fits  csst_qso_028_z2.44_high.fits  csst_qso_029_z2.31_high.fits  csst_qso_033_z2.91_high.fits  csst_qso_035_z1.03_high.fits  csst_qso_038_z1.20_high.fits  csst_qso_042_z1.61_mid.fits  csst_qso_046_z2.17_mid.fits  csst_qso_055_z2.93_mid.fits  csst_qso_059_z2.62_mid.fits  csst_qso_062_z2.55_mid.fits  csst_qso_070_z1.50_low.fits  csst_qso_075_z2.61_low.fits  csst_qso_083_z1.88_low.fits  csst_qso_086_z1.20_low.fits  csst_qso_091_z2.31_low.fits  csst_qso_094_z2.15_low.fits
data/pppics/: lll.txt
data/test_set/high_quality_QSO/: redshift_inference.xlsx
data/test_set/medium_quality_QSO/: TARDGET_ID_with_zbest.csv
data/test_set_2/: samples_summary.csv  spectrum.ipynb  实验记录.xlsx
data/test_set_3/fits/: 0.fits  1.fits  11.fits  12.fits  15.fits  18.fits  23.fits  24.fits  27.fits  28.fits  36.fits  39.fits  9.fits
mcptest/: test.ipynb  weather_server.py
notebooks/: llm_test.ipynb  mcp_test.ipynb  multi_agents_test.ipynb  prompts.ipynb  prompts_test.ipynb  read_fits.ipynb  read_fits.py  runtime_test.ipynb  speclite.ipynb  speclite_use.py
prompt/: prompt_template.json  prompt_template_EN.json
scripts/: main.py
src/: _astro_agents_old.py  _utils_old.py  astro_agents.py  astro_agents_EN.py  base_agent.py  context_manager.py  mcp_manager.py  mcp_server_tools.py  tools.py  utils.py  workflow_orchestrator.py  zzz_vi.ipynb
src/AstroAgent/: workflow_orchestrator.py
src/AstroAgent/core/: llm.py
src/AstroAgent/mcp_tools/: spectro_server.py  tool_protocol.py  tools.py
test_set/CSST/combined_samples/: combined_shuffled_samples.csv  combined_shuffled_samples.txt
test_set/CSST/dataset/: 10304.fits  13664.fits  16058.fits  17468.fits  18679.fits  21268.fits  21371.fits  5297.fits
test_set/DESI/: all_spectra_per_wave.fits
test_set/DESI_VI/ELG/: ELG_sample.xlsx
test_set/DESI_VI/LRG/: LRG_sample.xlsx
test_set/DESI_VI/QSO/: QSO_sample.xlsx
test_set/csst/combined_samples/: combined_shuffled_samples.npy
test_set/csst/dataset/: 13533.fits  2354.fits  5528.fits  5624.fits
utils/: 1.ipynb  1p1.ipynb  1p2.ipynb  2.ipynb  demo.ipynb  tools.py
(+701 files in other folders)
